--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "version": "0.0.1",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
+    "prettier": "^1.18.2",
+    "prettier-plugin-svelte": "^0.7.0",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
@@ -18,7 +20,8 @@
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
     "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev"
+    "start:dev": "sirv public --single --dev",
+    "format": "prettier --write --plugin-search-dir=. src/**/*.{js,svelte}"
   },
   "license": "MIT"
 }
