--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,5 @@
   "endOfLine": "lf",
   "semi": false,
   "tabWidth": 2,
-  "trailingComma": "es5",
-  "singleQuote": false
+  "singleQuote": true
 }
