--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "sirv-cli": "^0.4.5"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c && node ssr/build.js",
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
     "start": "sirv public --single",
