--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "version": "0.0.1",
-  "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
-    "prettier-plugin-svelte": "^0.7.0",
-    "rollup": "^1.27.13",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-livereload": "^1.0.4",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.1.1",
-    "rollup-plugin-terser": "^5.1.3",
-    "svelte": "^3.16.5"
+  "name": "frenco.codes",
+  "private": true,
+  "description": "portfolio",
+  "version": "0.1.0",
+  "license": "MIT",
+  "scripts": {
+    "develop": "gatsby develop",
+    "start": "npm run develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "test": "echo \"No test\""
   },
   "dependencies": {
-    "sirv-cli": "^0.4.5"
-  },
-  "scripts": {
-    "build": "rollup -c && node ssr/build.js",
-    "autobuild": "rollup -c -w",
-    "dev": "run-p start:dev autobuild",
-    "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev",
-    "format": "prettier --write --plugin-search-dir=. src/**/*.{js,svelte}"
-  },
-  "license": "MIT"
+    "gatsby": "^2.17.10",
+    "gatsby-plugin-react-helmet": "^3.0.5",
+    "gatsby-plugin-root-import": "^2.0.5",
+    "gatsby-plugin-sass": "^2.0.7",
+    "node-sass": "^4.11.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "react-helmet": "^5.2.0"
+  }
 }
