--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     }
   },
   "dependencies": {
+    "@octokit/rest": "^18.0.12",
     "autoprefixer": "^10.0.2",
     "classnames": "^2.2.6",
     "next": "^10.0.2",
