feat: add use-sound

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "16.13.1",
     "react-spring": "^9.0.0-rc.3",
     "react-toggle-dark-mode": "^1.0.3",
-    "tailwindcss": "^2.0.1"
+    "tailwindcss": "^2.0.1",
+    "use-sound": "^2.0.1"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
